--- a/src/styles/WSearchCard.css
+++ b/src/styles/WSearchCard.css
@@ -1,7 +1,7 @@
 .search-card {
   width: 400px;
   height: 220px;
-  background: #212121;
+  background: var(--gray);
   box-shadow: rgba(0, 0, 0, 0.4) 10px 20px 30px,
     rgba(0, 0, 0, 0.3) 10px 1px 53px 3px, rgba(1, 0, 0, 0.2) 0px -1px 3px inset;
   text-align: center;
