--- a/src/styles/ChapterButton.css
+++ b/src/styles/ChapterButton.css
@@ -1,5 +1,5 @@
 .btn-cssbuttons {
-  --btn-color: #009788;
+  --btn-color: var(--cyan);
   position: relative;
   font-size: 1vw;
   line-height: 1;
@@ -116,13 +116,13 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  background-color: #212121;
+  background-color: var(--gray);
   border: none;
   font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0px 0px 20px #212121;
+  box-shadow: 0px 0px 20px var(--gray);
   cursor: pointer;
   transition-duration: 0.3s;
   overflow: hidden;
@@ -158,7 +158,7 @@
 .mg-button::before {
   position: absolute;
   top: -10px;
-  color: #009788;
+  color: var(--cyan);
   transition-duration: 0.3s;
   font-size: 2px;
 }
