--- a/src/styles/FavoriteWebtoon.css
+++ b/src/styles/FavoriteWebtoon.css
@@ -54,7 +54,7 @@
 }
 
 .f-backloaded {
-  background-color: #212121;
+  background-color: var(--gray);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -77,10 +77,10 @@
   background: linear-gradient(
     90deg,
     transparent,
-    #009788,
-    #009788,
-    #009788,
-    #009788,
+    var(--cyan),
+    var(--cyan),
+    var(--cyan),
+    var(--cyan),
     transparent
   );
   animation: initial;
@@ -90,7 +90,7 @@
   position: relative;
   width: 98.5%;
   height: 98.5%;
-  background-color: #212121;
+  background-color: var(--gray);
   border-radius: 5px;
   color: white;
   display: flex;
