--- a/src/styles/FilterToggleButton.css
+++ b/src/styles/FilterToggleButton.css
@@ -19,8 +19,8 @@
   border-radius: 0.8rem;
   min-width: 124px;
   text-align: center;
-  border: 0.5px solid #009788;
-  color: #009788;
+  border: 0.5px solid var(--cyan);
+  color: var(--cyan);
   cursor: pointer;
 }
 
@@ -39,7 +39,7 @@
 }
 
 .nio:checked + .ni {
-  background: #009788;
+  background: var(--cyan);
   color: #000;
 }
 
