--- a/src/styles/Module.css
+++ b/src/styles/Module.css
@@ -2,13 +2,13 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: #212121;
+  background-color: var(--gray);
   border: none;
   font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0px 0px 20px #212121;
+  box-shadow: 0px 0px 20px var(--gray);
   cursor: pointer;
   transition-duration: 0.3s;
   overflow: hidden;
@@ -45,7 +45,7 @@
 .m-button::before {
   position: absolute;
   top: -20px;
-  color: #009788;
+  color: var(--cyan);
   transition-duration: 0.3s;
   font-size: 2px;
 }
