--- a/src/styles/PushButton.css
+++ b/src/styles/PushButton.css
@@ -1,22 +1,22 @@
 .pb-button {
   height: 45px;
-  --accent: #009788;
+  --accent: var(--cyan);
   font-weight: bold;
   letter-spacing: 0.1em;
   border: none;
   border-radius: 1.1em;
-  background-color: #212121;
+  background-color: var(--gray);
   padding: 1em 1em;
   transition: background-color ease-in-out 0.1s, letter-spacing ease-in-out 0.1s,
     transform ease-in-out 0.1s;
-  color: #009788;
-  border: 0.5px solid #009788;
+  color: var(--cyan);
+  border: 0.5px solid var(--cyan);
   margin-left: 5px;
   cursor: pointer;
 }
 
 .pb-button:active {
   background-color: var(--accent);
-  color: #212121;
+  color: var(--gray);
   transform: scale(0.95);
 }
