--- a/src/styles/Queue.css
+++ b/src/styles/Queue.css
@@ -3,7 +3,7 @@
   color: white;
 }
 .queue-div {
-  background-color: rgb(21, 21, 21);
+  background-color: var(--gray);
   border-radius: 50px;
 }
 .manage {
@@ -22,7 +22,7 @@
   padding-left: 20px;
   width: 100%;
   font-size: larger;
-  color: #009788;
+  color: var(--cyan);
   align-items: center;
   align-self: center;
   font-weight: bold;
@@ -72,7 +72,7 @@
   position: absolute;
   top: -30px;
   opacity: 0;
-  background-color: #009788;
+  background-color: var(--cyan);
   width: fit-content;
   white-space: nowrap;
   color: white;
@@ -103,5 +103,5 @@
   padding-top: 10px;
 }
 .no-info{
-  color: #009788;
+  color: var(--cyan);
 }
