--- a/src/styles/Saucer.css
+++ b/src/styles/Saucer.css
@@ -1,6 +1,6 @@
 .container p {
   text-align: center;
-  color: #009788;
+  color: var(--cyan);
   font-weight: bold;
 }
 
@@ -19,7 +19,7 @@
 
 .f-header {
   margin-top: 30px;
-  color: #009788;
+  color: var(--cyan);
 }
 
 .ff-container {
@@ -33,7 +33,7 @@
 .locate-header {
   flex: 1;
   width: 100%;
-  border: 2px dashed #009788;
+  border: 2px dashed var(--cyan);
   border-radius: 10px;
   display: flex;
   align-items: center;
@@ -69,34 +69,34 @@
   color: #999;
   font-size: 15px;
   border-radius: 50%;
-  background: #212121;
-  border: 4px solid #009788;
+  background: var(--gray);
+  border: 4px solid var(--cyan);
   transition: all 200ms ease;
   transition-delay: 0s;
 }
 .steps .steps-circle.active {
   transition-delay: 100ms;
-  border-color: #009788;
-  color: #009788;
+  border-color: var(--cyan);
+  color: var(--cyan);
 }
 .steps .steps-circle.done {
   transition-delay: 100ms;
-  border-color: #00978800;
-  background-color: #009788;
-  color: #212121;
+  border-color: var(--cyan)00;
+  background-color: var(--cyan);
+  color: var(--gray);
 }
 .steps .steps-progress-bar {
   position: absolute;
   height: 4px;
   width: 100%;
-  background: #212121;
+  background: var(--gray);
   z-index: -1;
 }
 .steps-progress-bar .steps-indicator {
   position: absolute;
   height: 100%;
   width: 0px;
-  background: #009788;
+  background: var(--cyan);
   transition: all 300ms ease;
 }
 .steps-container {
@@ -169,6 +169,6 @@
 }
 .sr-p a {
   text-decoration: none;
-  color: #009788;
+  color: var(--cyan);
 }
 
