--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -2,13 +2,13 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: #212121;
+  background-color: var(--gray);
   border: none;
   font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0px 0px 20px #212121;
+  box-shadow: 0px 0px 20px var(--gray);
   cursor: pointer;
   transition-duration: 0.3s;
   overflow: hidden;
@@ -53,7 +53,7 @@
 .m-button::before {
   position: absolute;
   top: -20px;
-  color: #009788;
+  color: var(--cyan);
   transition-duration: 0.3s;
   font-size: 2px;
 }
@@ -96,18 +96,18 @@
 
 .f-menu > li {
   margin: 0;
-  color: #009788;
+  color: var(--cyan);
   background-color: transparent;
-  border: 0.5px solid #009788;
+  border: 0.5px solid var(--cyan);
 }
 
 .f-menu > li:hover {
-  background-color: #009788;
+  background-color: var(--cyan);
   color: #000;
 }
 
 .f-menu > li.selected {
-  background-color: #009788;
+  background-color: var(--cyan);
   color: #000;
 }
 
