--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -3,22 +3,22 @@
   height: 30px;
   border: 2px solid transparent;
   outline: none;
-  border-bottom: 2px solid #009788;
+  border-bottom: 2px solid var(--cyan);
   caret-color: #3f3f3f;
   background-color: transparent;
   padding: 5px;
   transition: .5s linear;
-  color: #009788;
+  color: var(--cyan);
   letter-spacing: 1px;
 }
 
 .input:focus {
-  border: 2px solid #009788;
-  caret-color: #009788;
-  color: #009788;
+  border: 2px solid var(--cyan);
+  caret-color: var(--cyan);
+  color: var(--cyan);
   box-shadow: 4px 4px 10px #070707;
 }
 
 .input:focus::placeholder {
-  color: #009788;
+  color: var(--cyan);
 }
