--- a/src/styles/Topbar.css
+++ b/src/styles/Topbar.css
@@ -11,8 +11,7 @@
   -moz-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
-  /* background-image: url("../../../mui/public/assets/Artboard\ 3.png"); */
-  background-color: #212121;
+  background-color: var(--gray);
 }
 
 .mainApp > .topBar {
@@ -32,7 +31,7 @@
 }
 
 .titleBarText{
-  color: #009788;
+  color: var(--cyan);
   font-weight: bold;
   margin-right: auto;
   margin-left: 4px;
@@ -106,7 +105,7 @@
 }
 
 .titleBarBtns > .minimizeBtn:hover {
-  background-color: #009788;
+  background-color: var(--cyan);
 }
 
 .titleBarBtns > .minimizeBtn:hover > img {
@@ -156,7 +155,7 @@
 .menu-bars {
   width: 20px;
   height: 2px;
-  background-color: #009788;
+  background-color: var(--cyan);
   border-radius: 5px;
   transition-duration: 0.3s;
 }
@@ -199,7 +198,7 @@
   position: absolute;
   top: 50px;
   opacity: 0;
-  background-color: #009788;
+  background-color: var(--cyan);
   color: white;
   padding: 5px 10px;
   border-radius: 5px;
