--- a/src/styles/loading.css
+++ b/src/styles/loading.css
@@ -12,7 +12,7 @@
   height: calc(100% - 9.9px);
   border: 5px solid transparent;
   border-radius: 50%;
-  border-top-color: #009788;
+  border-top-color: var(--cyan);
   animation: spin 5s cubic-bezier(0.17, 0.49, 0.96, 0.79) infinite;
 }
 
