--- a/src/styles/moduleCard.css
+++ b/src/styles/moduleCard.css
@@ -1,5 +1,5 @@
 .m-card {
-  --background: linear-gradient(to left, #00c778 0%, #009788 100%);
+  --background: linear-gradient(to left, #00c778 0%, var(--cyan) 100%);
   width: 190px;
   height: 250px;
   padding: 5px;
@@ -47,7 +47,7 @@
   position: absolute;
   top: 10px;
   left: 10px;
-  color: #009788;
+  color: var(--cyan);
   padding: 5px;
   border-radius: 10px;
   font-size: small;
@@ -76,13 +76,13 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: #212121;
+  background-color: var(--gray);
   border: none;
   font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0px 0px 20px #212121;
+  box-shadow: 0px 0px 20px var(--gray);
   cursor: pointer;
   transition-duration: 0.3s;
   overflow: hidden;
@@ -119,7 +119,7 @@
 .m-button::before {
   position: absolute;
   top: -20px;
-  color: #009788;
+  color: var(--cyan);
   transition-duration: 0.3s;
   font-size: 2px;
 }
