--- a/src/styles/webtoonCard.css
+++ b/src/styles/webtoonCard.css
@@ -49,7 +49,7 @@
 }
 
 .front, .back, .backloaded {
-  background-color: #212121;
+  background-color: var(--gray);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -68,7 +68,7 @@
   display: block;
   width: 160px;
   height: 160%;
-  background: linear-gradient(90deg, transparent, #009788, #009788, #009788, #009788, transparent);
+  background: linear-gradient(90deg, transparent, var(--cyan), var(--cyan), var(--cyan), var(--cyan), transparent);
   animation: rotation_481 5000ms infinite linear;
 }
 
@@ -79,7 +79,7 @@
   top: 0;
   width: 160px;
   height: 10%;
-  background: linear-gradient(90deg, transparent, #009788, #009788, #009788, #009788, transparent);
+  background: linear-gradient(90deg, transparent, var(--cyan), var(--cyan), var(--cyan), var(--cyan), transparent);
   animation: initial;
 }
 
@@ -90,7 +90,7 @@
   top: 0;
   width: 160px;
   height: 10%;
-  background: linear-gradient(90deg, transparent, #009788, #009788, #009788, #009788, transparent);
+  background: linear-gradient(90deg, transparent, var(--cyan), var(--cyan), var(--cyan), var(--cyan), transparent);
   animation: initial;
 }
 
@@ -98,7 +98,7 @@
   position: relative;
   width: 98.5%;
   height: 98.5%;
-  background-color: #212121;
+  background-color: var(--gray);
   border-radius: 5px;
   color: white;
   display: flex;
@@ -110,7 +110,7 @@
   position: absolute;
   width: 98.5%;
   height: 98.5%;
-  background-color: #212121;
+  background-color: var(--gray);
   border-radius: 5px;
   color: white;
   display: flex;
@@ -179,13 +179,13 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  background-color: #212121;
+  background-color: var(--gray);
   border: none;
   font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0px 0px 20px #212121;
+  box-shadow: 0px 0px 20px var(--gray);
   cursor: pointer;
   transition-duration: 0.3s;
   overflow: hidden;
@@ -225,7 +225,7 @@
 .mm-button::before {
   position: absolute;
   top: -10px;
-  color: #009788;
+  color: var(--cyan);
   transition-duration: 0.3s;
   font-size: 2px;
 }
