--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,12 +3,13 @@
 }
 
 .App-header {
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--cyan);
 }
 
 .container {
