removed chunk function, fixed bugs

--- a/src/styles/FavoriteWebtoon.css
+++ b/src/styles/FavoriteWebtoon.css
@@ -6,7 +6,11 @@
 
 .f-container {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .f-card {
