Fixed a bug with searcher, Added textDecoration style

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -39,6 +39,10 @@ body {
   user-select: none;
 }
 
+body a {
+  text-decoration: none;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
