--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,21 +2,17 @@
 @import "App.css";
 @import "About.css";
 @import "ChapterButton.css";
-@import "DCard.css";
-@import "Download.css";
+@import "DownloadCard.css";
 @import "FavoriteWebtoon.css";
 @import "FilterButton.css";
 @import "FilterToggleButton.css";
 @import "FlipButton.css";
-@import "Home.css";
 @import "HomeButton.css";
 @import "Infoed.css";
 @import "Loading.css";
 @import "Module.css";
 @import "ModuleCard.css";
-@import "ModuleChecker.css";
 @import "PushButton.css";
-@import "QCard.css";
 @import "Queue.css";
 @import "Saucer.css";
 @import "Search.css";
@@ -24,6 +20,7 @@
 @import "SearchFilter.css";
 @import "Settings.css";
 @import "SideBar.css";
+@import "StepsCircle.css";
 @import "Topbar.css";
 @import "Webtoon.css";
 @import "WebtoonCard.css";
