--- a/src/styles/Module.css
+++ b/src/styles/Module.css
@@ -68,3 +68,19 @@
 .m-button:hover .btn-icon {
   opacity: 0;
 }
+
+.m-button-big {
+  width: 60px;
+  height: 60px;
+  justify-self: center;
+  align-self: center;
+  vertical-align: middle;
+}
+
+.m-button-big::before {
+  top: -10px;
+}
+
+.m-button-big:hover::before {
+  font-size: 16px;
+}
