--- a/src/styles/DownloadCard.css
+++ b/src/styles/DownloadCard.css
@@ -2,8 +2,9 @@
   width: 810px;
   height: 100px;
   border-radius: 50px;
+  border-color: var(--cyan);
   display: flex;
-  margin: 20px;
+  margin-top: 8px;
 }
 
 .statusg {
@@ -11,23 +12,29 @@
   background-color: var(--gray);
   min-width: 350px;
   height: 100px;
-  color: #ffffff;
+  color: var(--cyan);
   text-align: center;
   align-items: center;
+  border-color: var(--cyan);
+  border-left: 0cap;
+  border-style: solid;
 }
 
 .infog {
   width: 100%;
   height: 100px;
   background-color: var(--gray);
-  border-bottom-left-radius: 50px;
-  border-top-left-radius: 50px;
+  border-bottom-left-radius: 20px;
+  border-top-left-radius: 20px;
   align-items: center;
   justify-content: space-around;
   text-align: center;
-  color: #fff;
+  color: var(--cyan);
+  border-color: var(--cyan);
+  border-style: solid;
 }
 .card-titlee {
+  margin-top: 17px;
   font-size: x-large;
 }
 .card-info {
@@ -36,50 +43,26 @@
 .d-status {
   width: 100%;
 }
-
 .button-containerrr {
   display: flex;
-  background-color: var(--gray);
+  background-color: var(--cyan);
   height: 100px;
   align-items: center;
   justify-content: space-around;
-  border-top-right-radius: 50px;
-  border-bottom-right-radius: 50px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
   min-width: 220px;
+  border-color: var(--cyan);
+  border-style: solid;
 }
-
-.button-containerrr::before {
-  content: "";
-  display: block;
-  box-sizing: border-box;
-  height: 100%;
-
-  border-left: 2px solid transparent;
-  border-image: linear-gradient(
-    180deg,
-    rgba(255, 255, 255, 0) 25%,
-    rgba(0, 151, 136, 1) 50%,
-    rgba(255, 255, 255, 0) 75%
-  );
-  border-image-slice: 1;
+.button-containerrr .icon {
+  filter: brightness(0) saturate(100%) invert(12%) sepia(0%) saturate(1083%)
+    hue-rotate(314deg) brightness(99%) contrast(96%);
 }
-
-.statusg::before {
-  content: "";
-  display: block;
-  box-sizing: border-box;
-  height: 100%;
-
-  border-left: 2px solid transparent;
-  border-image: linear-gradient(
-    180deg,
-    rgba(255, 255, 255, 0) 25%,
-    rgba(0, 151, 136, 1) 50%,
-    rgba(255, 255, 255, 0) 75%
-  );
-  border-image-slice: 1;
+.button-containerrr .tooltip {
+  background-color: var(--gray);
+  color: var(--cyan);
 }
-
 .icon {
   font-size: 20px;
   width: 20px;
