--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,11 +26,18 @@
 @import "WebtoonCard.css";
 @import "WSearchCard.css";
 
+@font-face {
+  padding-top: 10px;
+  font-family: "MouldyCheeseRegular";
+  src: local("MouldyCheeseRegular"),
+    url(../../public/assets/MouldyCheeseRegular.woff) format("woff");
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "MouldyCheeseRegular", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   user-select: none;
@@ -40,11 +47,16 @@ body a {
   text-decoration: none;
 }
 
+button {
+  font-family: "MouldyCheeseRegular";
+}
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: "MouldyCheeseRegular", source-code-pro, Menlo, Monaco, Consolas,
+    "Courier New", monospace;
 }
 
 ::-webkit-scrollbar {
   display: none;
 }
+
